# fristad

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml
fristad/: calendar.py  cli.py  colours.py
